--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3"
+        "pestphp/pest": "^0.3.9",
+        "pestphp/pest-plugin-laravel": "^0.3.0",
+        "phpunit/phpunit": "^9.3.10"
     },
     "config": {
         "optimize-autoloader": true,
